[package]
name = "vaults"
version = "0.1.0"
description = "Created with Anchor"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "vaults"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []

[dependencies]
solana-program = "=1.14.9"
anchor-lang = {version = "0.26.0", features = ["init-if-needed"]}
anchor-spl = "0.26.0"
blake3 = "=1.3.1"
toml_edit = "=0.18.1"
proc-macro-crate = "=1.3.0"